# scanstamp

./: .gitignore  DEVELOPMENT_ENVIRONMENT.md  FUNCTIONAL_SPEC.md  README.md  WARP.md  pyproject.toml
man/: scanstamp.1
src/scanstamp/: __init__.py  cli.py  core.py  extract.py  llm.py  logging_undo.py  models.py  naming.py  traverse.py
tests/: test_llm.py  test_logging_undo.py  test_naming.py  test_traverse.py
